<resources>
    <string name="app_name">bgmse</string>
    <string name="tab_text_1">Favorate</string>
    <string name="tab_text_2">SE</string>
    <string name="tab_text_3">Setting</string>
    <string name="seg3_button1">Add New SE</string>

    <string name="cap_choose_path">Choose File </string>
    <string name="init_choose_path">Please Choose a File</string>
    <string name="cap_input_content">Input Content </string>
    <string name="init_input_content"> </string>
    <string name="add_items_add">Add  </string>
    <string name="add_items_exit">Exit   </string>

    <string name="add_items_mode1">SE</string>
    <string name="add_items_mode2">BGM</string>

    <string name="seg3button1_label">Add New SE</string>
    <string name="seg3button1_content">Import a new music file</string>


    <string name="action_mul_cut">MUL</string>
    <string name="action_mul_extend">Cancel</string>
    <string name="action_settings">Setting</string>
    <string name="action_fav">Fav</string>
    <string name="action_delete">Del</string>


</resources>
