<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_cap_choose_path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cap_choose_path"
            android:textColor="#000000"
            android:textSize="18sp" />

        <View
            android:layout_width="1px"
            android:layout_height="fill_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="#90909090" />

        <TextView
            android:id="@+id/text_init_choose_path"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/init_choose_path" />
    </LinearLayout>

    <View android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="#90909090"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_cap_input_content"
            android:layout_width="219dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cap_input_content"
            android:textColor="#000000"
            android:textSize="18sp" />

        <View
            android:layout_width="1px"
            android:layout_height="fill_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="#90909090" />

        <EditText
            android:id="@+id/text_init_input_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType=""
            android:maxLength="50"
            android:hint="@string/init_input_content" />
    </LinearLayout>

    <View android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="#90909090"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id = "@+id/radioGroupType">

        <RadioButton
            android:id="@+id/radioButtonSE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_items_mode1"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radioButtonBGM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_items_mode2"
            android:textSize="20sp" />
    </RadioGroup>

    <View android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="#90909090"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp" />

    <TextView
        android:id="@+id/text_high"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_add_items_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_items_add"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#3F51B5"
            android:textSize="30sp"
            android:textStyle="bold" />

        <View
            android:layout_width="1px"
            android:layout_height="fill_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="#90909090" />

        <TextView
            android:id="@+id/text_add_items_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_items_exit"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#3F51B5"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <View android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="#90909090"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp" />

</LinearLayout>